--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -87,7 +87,7 @@ Example: `TYPE+INDEX` refers to joining `TYPE` and `INDEX` together without a sp
 Adds an income of your personal finance to PalPay +
 Format: `in $/AMOUNT n/ITEM d/DATE [c/CATEGORY]`
 
-Have an income that you need to log down? PalPay accepts all income inputs through the `in` command. Inputting an `in` command will increase the overall balance value. Your income statements has the added option to be tagged under one or more categories, you can do so by including the `[c/CATEGORY]` parameter in your command line. All uncategorized incomes will be tagged under the `GENERAL` category.
+Have an income that you need to log down? PalPay accepts all income inputs through the `in` command. Inputting an `in` command will increase the overall balance value. Your income statements have the added option to be tagged under one or more categories. You can do so by including the `[c/CATEGORY]` parameter in your command line. All uncategorized incomes will be tagged under the `GENERAL` category.
 
 
 ****
@@ -109,7 +109,7 @@ Have an income that you need to log down? PalPay accepts all income inputs throu
 .Income Logging Example 1
 image::in_ug_1.png[]
 
-. The income is added to the top of the *Transactions* tab
+. The income is added to the empty *Transactions* tab.
 . The added income is given a `GENERAL` category.
 . Balance has increased from $0 to $120 (red box in Figure 2).
 
@@ -119,20 +119,20 @@ image::in_ug_2.png[]
  Example 2: in $/500.50 n/allowance d/01012020 c/parents
 
 . Inputs an income of $500.50 with description set to 'allowance' and date set on 01/01/2020.
-. The income includes `parents` in the `CATEGORY` field.
+. The income includes `parents` under the `CATEGORY` field.
 . Initial balance (red box in Figure 3) has a value of $120.
 
 .Income Logging Example 2
 image::in_ug_3.png[]
 
-. The income is added to the top of the *Transactions* tab
-. The added income is given a `parents` category.
+. The income is added to the bottom of the *Transactions* tab.
+. The added income tagged under `parents` category.
 . Balance has increased from $120 to $620.50 (red box in Figure 4).
 
 .Sample Income 2 Added
 image::in_ug_4.png[]
 
-Examples:
+Example Commands:
 
 * `in $/100 d/01012019 n/errand c/work c/company`
 * `in $/250.50 d/29022020 n/mom c/family`
@@ -144,15 +144,56 @@ Examples:
 Adds an expenditure of your personal finance +
 Format: `out $/AMOUNT n/ITEM d/DATE [c/CATEGORY]`
 
+Have you recently made an expenditure that requires logging down? PalPay accepts all expenditure inputs through the `out` command. Inputting an `out` command will decrease the overall balance value. Your expenditure statements, just like the income statements, have the added option to be tagged under one or more categories. You can do so by including the `[c/CATEGORY]` parameter in your command line. All uncategorized incomes will be tagged under the `GENERAL` category.
+
+Note that the `out` transactions differ from `in` transactions in the display amount. The `in` transactions are characterized by the *positive* value within their display box whilst the `out` transactions are characterized by the *negative* values in their display box. The difference can be observed in the example usage below.
+
 ****
 * `AMOUNT` accepts the value of this expenditure. The `AMOUNT` value must be non-negative, non zero and lesser than 1,000,000.
+* Users should not input negative values into `AMOUNT` (i.e. `out $/-100 ...`) as PalPay has already accounted for the difference between incomes and expenditures.
 * `ITEM` accepts the description of this expenditure.
 * `DATE` accepts the date of this transaction
 * `CATEGORY` accepts the CATEGORY for this expenditure. An `out` Transaction can be created without any `CATEGORY`.
-* `in` will update the Bank Account with a net **negative** amount (e.g. `out n/milk $/2 d/10102019` will **decrease** Bank Acount balance by $2)
+* `out` will update the Bank Account with a net **negative** amount (e.g. `out n/milk $/2 d/10102019` will **decrease** Bank Acount balance by $2)
 ****
 
-Examples:
+==== Example Usage
+
+ Example 1: out $/5 d/01012020 n/burger
+
+. Inputs an expenditure of $5 with description set to 'burger' and date set on 01/01/2020.
+. The expenditure has not utilized the optional `CATEGORY` field.
+. Initial balance (red box in Figure 5) has a value of $620.50.
+
+.Expenditure Logging Example 1
+image::out_ug_1.png[]
+
+. The expenditure is added to the bottom of the *Transactions* tab.
+. The amount value of the expenditure box should display a negative value (see Figure 6 entry 3).
+. The added expenditure is given a `GENERAL` category.
+. Balance has decreased from $620.50 to $615.50 (red box in Figure 6).
+
+.Sample Expenditure 1 Added
+image::out_ug_2.png[]
+
+ Example 2: out $/1000 n/maintenance d/02012020 c/car c/transport
+
+. Inputs an expenditure of $1000 with description set to 'maintenance' and date set on 02/01/2020.
+. The income includes `car` and `transport` under the `CATEGORY` field.
+. Initial balance (red box in Figure 7) has a value of $615.50.
+
+.Expenditure Logging Example 2
+image::out_ug_3.png[]
+
+. The expenditure is added to the bottom of the *Transactions* tab.
+. The added expenditure is tagged under `car` and `transport` category.
+. Balance has decreased from $615.50 to -$384.50 (red box in Figure 8).
+. The negative value of the balance indicates that the total spending amount outweighs the total savings amount.
+
+.Sample Expenditure 2 Added
+image::out_ug_4.png[]
+
+Example Commands:
 
 * `out $/100 d/01012019 n/milk c/food c/drinks`
 * `out $/29 d/29022020 n/taxi c/transport`
